@@ -1,98 +1,55 @@
 #include "eloader.h"
-#include "syscall.h"
 #include "debug.h"
 
-/* Find a thread by name */
-SceUID find_thread(const char *name) {
+// Find a thread by name
+SceUID find_thread(const char *name) 
+{
 	SceUID readbuf[256];
 	int idcount, ret;
 	SceKernelThreadInfo info;
 	
-	
-	#ifdef DEBUG
-		SceUID fd;
-	#endif
-	
-	#ifdef DEBUG
-		fd = sceIoOpen(DEBUG_PATH, PSP_O_CREAT|PSP_O_WRONLY|PSP_O_APPEND, 0777);
-		if (fd >= 0)
-		{
-			sceIoWrite(fd, " GET ID LIST ", strlen(" GET ID LIST "));
-			sceIoClose(fd);
-		}
-	#endif
-	
-	
-	sceKernelGetThreadmanIdList(SCE_KERNEL_TMID_Thread, &readbuf, sizeof(readbuf)/sizeof(SceUID), &idcount);
-	
-	
-	#ifdef DEBUG
-		fd = sceIoOpen(DEBUG_PATH, PSP_O_CREAT|PSP_O_WRONLY|PSP_O_APPEND, 0777);
-		if (fd >= 0)
-		{
-			sceIoWrite(fd, " GOT ID LIST, COUNT ", strlen(" GOT ID LIST, COUNT "));
-			sceIoWrite(fd, &idcount, sizeof(idcount));
-			sceIoClose(fd);
-		}
-	#endif
-	
+	ret = sceKernelGetThreadmanIdList(SCE_KERNEL_TMID_Thread, &readbuf, sizeof(readbuf)/sizeof(SceUID), &idcount);	
 
-	for(info.size=sizeof(info);idcount>0;idcount--)
-	{
-		
+	if (ret < 0)
+		return ret;
+
+	for(info.size=sizeof(info); idcount>0; idcount--)
+	{		
 		ret = sceKernelReferThreadStatus(readbuf[idcount-1], &info);
 		if(ret < 0)
 		{
 			DEBUG_PRINT(" sceKernelReferThreadStatus FAILED ", &ret, sizeof(ret));
-			return -1;
+			return ret;
 		}
-		if(strcmp(info.name, name) == 0)
+	
+		if (strcmp(info.name, name) == 0)
 			return readbuf[idcount-1];
 	}
 	
 	return -1;
 }
 
-/* Find a semaphore by name */
-SceUID find_sema(const char *name) {
+// Find a semaphore by name
+SceUID find_sema(const char *name) 
+{
 	SceUID readbuf[256];
-	int idcount;
+	int idcount, ret;
 	SceKernelSemaInfo info;
 	
-	/*
-	#ifdef DEBUG
-		SceUID fd;
-	#endif
-	
-	#ifdef DEBUG
-		fd = sceIoOpen(DEBUG_PATH, PSP_O_CREAT|PSP_O_WRONLY|PSP_O_APPEND, 0777);
-		if (fd >= 0)
-		{
-			sceIoWrite(fd, " GET ID LIST ", strlen(" GET ID LIST "));
-			sceIoClose(fd);
-		}
-	#endif
-	*/
-	
-	sceKernelGetThreadmanIdList(SCE_KERNEL_TMID_Semaphore, &readbuf, sizeof(readbuf)/sizeof(SceUID), &idcount);
-	
-	/*
-	#ifdef DEBUG
-		fd = sceIoOpen(DEBUG_PATH, PSP_O_CREAT|PSP_O_WRONLY|PSP_O_APPEND, 0777);
-		if (fd >= 0)
-		{
-			sceIoWrite(fd, " GOT ID LIST, COUNT ", strlen(" GOT ID LIST, COUNT "));
-			sceIoWrite(fd, &idcount, sizeof(idcount));
-			sceIoClose(fd);
-		}
-	#endif
-	*/
+	ret = sceKernelGetThreadmanIdList(SCE_KERNEL_TMID_Semaphore, &readbuf, sizeof(readbuf)/sizeof(SceUID), &idcount);
 
-	for(info.size=sizeof(info);idcount>0;idcount--)
+	if (ret < 0)
+		return ret;
+	
+	for(info.size=sizeof(info); idcount>0; idcount--)
 	{
+		ret = sceKernelReferSemaStatus(readbuf[idcount-1], &info);
+		if(ret < 0)
+		{
+			DEBUG_PRINT(" sceKernelReferSemaStatus FAILED ", &ret, sizeof(ret));
+			return ret;
+		}
 		
-		if(sceKernelReferSemaStatus(readbuf[idcount-1], &info) < 0)
-			return -1;
 		if(strcmp(info.name, name) == 0)
 			return readbuf[idcount-1];
 	}
@@ -100,46 +57,27 @@ SceUID find_sema(const char *name) {
 	return -1;
 }
 
-/* Find an event flag by name */
-SceUID find_evflag(const char *name) {
+// Find an event flag by name
+SceUID find_evflag(const char *name) 
+{
 	SceUID readbuf[256];
-	int idcount;
+	int idcount, ret;
 	SceKernelEventFlagInfo info;
 	
-	/*
-	#ifdef DEBUG
-		SceUID fd;
-	#endif
-	
-	#ifdef DEBUG
-		fd = sceIoOpen(DEBUG_PATH, PSP_O_CREAT|PSP_O_WRONLY|PSP_O_APPEND, 0777);
-		if (fd >= 0)
-		{
-			sceIoWrite(fd, " GET ID LIST ", strlen(" GET ID LIST "));
-			sceIoClose(fd);
-		}
-	#endif
-	*/
-	
-	sceKernelGetThreadmanIdList(SCE_KERNEL_TMID_EventFlag, &readbuf, sizeof(readbuf)/sizeof(SceUID), &idcount);
-	
-	/*
-	#ifdef DEBUG
-		fd = sceIoOpen(DEBUG_PATH, PSP_O_CREAT|PSP_O_WRONLY|PSP_O_APPEND, 0777);
-		if (fd >= 0)
-		{
-			sceIoWrite(fd, " GOT ID LIST, COUNT ", strlen(" GOT ID LIST, COUNT "));
-			sceIoWrite(fd, &idcount, sizeof(idcount));
-			sceIoClose(fd);
-		}
-	#endif
-	*/
+	ret = sceKernelGetThreadmanIdList(SCE_KERNEL_TMID_EventFlag, &readbuf, sizeof(readbuf)/sizeof(SceUID), &idcount);
 
-	for(info.size=sizeof(info);idcount>0;idcount--)
+	if (ret < 0)
+		return ret;
+
+	for(info.size=sizeof(info); idcount>0; idcount--)
 	{
+		ret = sceKernelReferEventFlagStatus(readbuf[idcount-1], &info);
+		if(ret < 0)
+		{
+			DEBUG_PRINT(" sceKernelReferEventFlagStatus FAILED ", &ret, sizeof(ret));
+			return ret;
+		}
 		
-		if(sceKernelReferEventFlagStatus(readbuf[idcount-1], &info) < 0)
-			return -1;
 		if(strcmp(info.name, name) == 0)
 			return readbuf[idcount-1];
 	}
